modify files structure

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
     </footer>
   </div>
-    <!-- <script src="./dist/bundle.js"></script> -->
-    <script src="./dev.js"></script>
+    <script src="./dist/bundle.js"></script>
+    <!-- <script src="./dev.js"></script> -->
 </body>
 </html>
