--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./dist/main.css">
-    <!-- <link rel="stylesheet" href="/CSS/main.css"> -->
     <title>ALPHA Shop</title>
 </head>
-<body>
+<body id="body">
   <div class="container">
     <header class="header">
       <div class="logo-wrapper">
@@ -158,7 +157,7 @@
           <div class="shop-bag__amount">
             <div class="form-row-spacebetween">
               <span class="shop-bag__amount-text">運費</span>
-              <span class="shop-bag__delivery-fee"></span>
+              <span class="shop-bag__delivery-fee">免費</span>
             </div>
             <div class="form-row-spacebetween">
               <span class="shop-bag__amount-text">小計</span>
@@ -212,6 +211,5 @@
     </footer>
   
     <script src="./dist/bundle.js"></script>
-    <!-- <script src="./dev.js"></script> -->
 </body>
 </html>
